--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
                     -   runner: macos-12
                         prefix: xcode
                 swift: 
-                    -   toolchain:  5.8-DEVELOPMENT-SNAPSHOT-2023-02-23-a
+                    -   toolchain:  5.8-DEVELOPMENT-SNAPSHOT-2023-03-07-a
                         branch:     swift-5.8-branch
         steps:
             -   uses: actions/checkout@v2
@@ -53,6 +53,7 @@ jobs:
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift --version
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift build -c release
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift run -c release DeclarationsTests
+                    $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift run -c release PackageResolutionTests
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift run -c release SemanticVersionsTests
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift run -c release SymbolResolutionTests
                     $SWIFT_TOOLCHAIN_DIRECTORY/usr/bin/swift run -c release SymbolGraphsTests
