fix mount path in CI workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,6 @@ jobs:
                     docker run -t --rm \
                         --name swift-environment \
                         -v $PWD:/swift-unidoc \
-                        -w /swift-unidoc \
+                        -w /swift/swift-unidoc \
                         ${{ matrix.image }} \
                         /bin/bash $(echo .github/pipeline)
