move all of the information from 'Meta' vertices into Volume.Meta, adapt queries accordingly, and implement a transient hack to migrate the volume records in an existing deployment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,3 +38,11 @@ jobs:
                         -w /swift/swift-unidoc \
                         ${{ matrix.image }} \
                         /bin/bash $(echo .github/pipeline)
+
+            -   name: store binary artifacts
+                uses: actions/upload-artifact@v3
+                with:
+                    name: unidoc binaries
+                    path: |
+                        .build/release/UnidocServer
+                        .build/release/UnidocBuild
