draft implementation of including dependencies in search results, implements #35

--- a/TypeScript/tsconfig.json
+++ b/TypeScript/tsconfig.json
@@ -23,6 +23,7 @@
         "Sources/Searchbar.ts",
         "Sources/SearchRunner.ts",
         "Sources/SearchOutput.ts",
+        "Sources/SearchVolume.ts",
         "Sources/Symbol.ts",
     ]
 }
