limit number of concurrent connections, and enable IPv6 support

--- a/TestDeployment/docker-compose.yml
+++ b/TestDeployment/docker-compose.yml
@@ -25,3 +25,7 @@ services:
 networks:
     unidoc-test:
         name: unidoc-test
+        enable_ipv6: true
+        ipam:
+           config:
+               - subnet: 2001:0DB8::/112
