--- a/TypeScript/tsconfig.json
+++ b/TypeScript/tsconfig.json
@@ -12,7 +12,8 @@
         "noImplicitReturns": true,
         "noUnusedLocals": true,
         "strict": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "target": "es2021"
     },
     "files":
     [
