try running pipeline as root

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
                     docker run -t --rm \
                         --network=unidoc-test \
                         --name swift-environment \
+                        --user root \
                         -v $PWD:/swift/swift-unidoc \
                         -w /swift/swift-unidoc \
                         ${{ matrix.image }} \
