we need to disable macOS CI until we have a way of running CI on Xcode 15.3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,8 +87,9 @@ jobs:
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
-            -   name: Swift version
-                run: swift --version
-                
             -   name: Build only
-                run: swift build
+            # https://github.com/apple/swift/issues/71606
+                if: false
+                run: |
+                    swift --version
+                    swift build
