--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,52 +44,14 @@ jobs:
     macos:
         runs-on: macos-14
         name: macOS
-        strategy:
-            matrix:
-                swift:
-                    -   toolchain:  5.10-RELEASE
-                        branch:     swift-5.10-release
-
         env:
-            SWIFT_TOOLCHAIN_DIRECTORY: >-
-                /Library/Developer/Toolchains/swift-${{ matrix.swift.toolchain }}.xctoolchain
+            DEVELOPER_DIR: "/Applications/Xcode_15.3.app/Contents/Developer"
 
         steps:
-            -   name: Cache swift toolchains
-                uses: actions/cache@v2
-                with:
-                    path: swift-${{ matrix.swift.toolchain }}.pkg
-                    key: macos:swift:${{ matrix.swift.toolchain }}
-
-            -   name: Cache status
-                id:   cache_status
-                uses: andstor/file-existence-action@v1
-                with:
-                    files: swift-${{ matrix.swift.toolchain }}.pkg
-
-            -   name: Download toolchain
-                if: steps.cache_status.outputs.files_exists == 'false'
-                run:   "curl https://download.swift.org/\
-                        ${{ matrix.swift.branch }}/xcode/\
-                        swift-${{ matrix.swift.toolchain }}/\
-                        swift-${{ matrix.swift.toolchain }}-osx.pkg \
-                        --output swift-${{ matrix.swift.toolchain }}.pkg"
-
-            -   name: Install toolchain
-                run: |
-                    sudo installer -pkg swift-${{ matrix.swift.toolchain }}.pkg -target /
-
-            -   name: Select toolchain
-                run: |
-                    echo "TOOLCHAINS=$(plutil -extract CFBundleIdentifier raw \
-                        $SWIFT_TOOLCHAIN_DIRECTORY/Info.plist)" >> $GITHUB_ENV
-
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
             -   name: Build only
-            # https://github.com/apple/swift/issues/71606
-                if: false
                 run: |
                     swift --version
                     swift build
