separate PackageBuildOperation from PackageConfigOperation, use a little javascript to solve the dropdown menu problem, and add UI for requesting version-specific builds

--- a/TypeScript/tsconfig.json
+++ b/TypeScript/tsconfig.json
@@ -3,8 +3,9 @@
     {
         "lib":
         [
-            "dom",
-            "es2021"
+            "DOM",
+            "DOM.Iterable",
+            "ES2021"
         ],
         "removeComments": true,
         "preserveConstEnums": true,
