--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,12 +54,17 @@ jobs:
             -   name: Build debug
                 run: |
                     swift --version
-                    swift build
+                    swift build -Xcxx -I/usr/lib/swift -Xcxx -I/usr/lib/swift/Block
 
             -   name: Build release
                 run: |
-                    swift build -c release
+                    swift build -c release \
+                        -Xcxx -I/usr/lib/swift \
+                        -Xcxx -I/usr/lib/swift/Block
 
             -   name: Test SymbolGraphBuilder
                 run: |
-                    swift run -c release SymbolGraphBuilderTests
+                    swift run -c release \
+                        -Xcxx -I/usr/lib/swift \
+                        -Xcxx -I/usr/lib/swift/Block \
+                        SymbolGraphBuilderTests
