--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
         runs-on: macos-14
         name: macOS
         env:
+            UNIDOC_ENABLE_INDEXSTORE: "1"
             DEVELOPER_DIR: "/Applications/Xcode_15.3.app/Contents/Developer"
 
         steps:
