--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,17 +55,12 @@ jobs:
             -   name: Build debug
                 run: |
                     swift --version
-                    swift build -Xcxx -I/usr/lib/swift -Xcxx -I/usr/lib/swift/Block
+                    swift build
 
             -   name: Build release
                 run: |
-                    swift build -c release \
-                        -Xcxx -I/usr/lib/swift \
-                        -Xcxx -I/usr/lib/swift/Block
+                    swift build -c release
 
             -   name: Test SymbolGraphBuilder
                 run: |
-                    swift run -c release \
-                        -Xcxx -I/usr/lib/swift \
-                        -Xcxx -I/usr/lib/swift/Block \
-                        SymbolGraphBuilderTests
+                    swift run -c release SymbolGraphBuilderTests
