--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -18,7 +18,7 @@ jobs:
             SWIFT_ID: "swift-5.10.1-RELEASE-ubuntu24.04"
 
             UNIDOC_ENABLE_INDEXSTORE: "1"
-            UNIDOC_PLATFORM: "linux-$(uname -i)"
+            UNIDOC_PLATFORM: "linux"
             UNIDOC_VERSION: ${{ github.head_ref || github.ref_name }}
 
         steps:
@@ -66,17 +66,17 @@ jobs:
 
             -   name: Test uploader
                 run: |
-                    .build/release/unidoc-publish unidoc-publish /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc --secret "$AWS_S3_ACCESS_SECRET"
                     .build/release/unidoc-publish \
                         unidoc-publish \
-                        /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc \
+                        /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM-$(uname -i)/unidoc \
                         --secret "$AWS_S3_ACCESS_SECRET"
 
-            -   name: Build release
+            -   name: Build tools
                 run: |
                     swift --version
                     swift build -c release \
                         --static-swift-stdlib \
+                        --product unidoc-tools \
                         -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift \
                         -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift/Block
 
@@ -84,6 +84,6 @@ jobs:
                 run: |
                     .build/release/unidoc-publish \
                         unidoc-tools \
-                        /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc \
+                        /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM-$(uname -i)/unidoc \
                         --secret "$AWS_S3_ACCESS_SECRET"
 
