--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,8 +1,13 @@
 name: package
 
 on:
+    #   We build semver tags, and the master branch.
     push:
         branches: [ master ]
+        tags:
+            -   '[0-9]+.[0-9]+.[0-9]+'
+
+    #   TODO: this does not need to run on every PR.
     pull_request:
         branches: [ master ]
 
@@ -87,12 +92,18 @@ jobs:
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
+            #   For some reason, Swift on Linux will not build all the products in one
+            #   invocation. We pass the same flags to both invocations to speed up the build.
             -   name: Build products
                 run: |
                     swift --version
                     swift build -c release \
                         --static-swift-stdlib \
                         --product unidoc-publish \
+                        -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift \
+                        -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift/Block
+                    swift build -c release \
+                        --static-swift-stdlib \
                         --product unidoc-tools \
                         -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift \
                         -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift/Block
