--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ on:
         branches: [ master ]
 
 jobs:
-    linux:
-        runs-on: ubuntu-22.04
+    server:
+        runs-on: ubuntu-24.04
         name: Amazon Linux 2023
 
         strategy:
