--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -43,36 +43,12 @@ jobs:
     linux:
         runs-on: ubuntu-24.04
         name: Ubuntu 24.04
-
-        env:
-            SWIFT_PREFIX: "swift-5.10.1-release/ubuntu2404/swift-5.10.1-RELEASE"
-            SWIFT_ID: "swift-5.10.1-RELEASE-ubuntu24.04"
-
         steps:
-            -   name: Cache Swift toolchain
-                uses: actions/cache@v2
+            -   name: Install Swift
+                uses: tayloraswift/swift-install-action@master
                 with:
-                    path: ${{ env.SWIFT_ID }}.tar.gz
-                    key: ${{ env.SWIFT_ID }}
-
-            -   name: Cache status
-                id:   cache_status
-                uses: andstor/file-existence-action@v1
-                with:
-                    files: ${{ env.SWIFT_ID }}.tar.gz
-
-            -   name: Download Swift
-                if: steps.cache_status.outputs.files_exists == 'false'
-                run: |
-                    curl https://download.swift.org/$SWIFT_PREFIX/$SWIFT_ID.tar.gz \
-                        --output $SWIFT_ID.tar.gz
-
-            -   name: Set up Swift
-                run: |
-                    mkdir -p $HOME/$SWIFT_ID
-                    tar -xzf $SWIFT_ID.tar.gz -C $HOME/$SWIFT_ID --strip 1
-                    echo "$HOME/$SWIFT_ID/usr/bin" >> $GITHUB_PATH
-                    cat $GITHUB_PATH
+                    swift-prefix: "swift-5.10.1-release/ubuntu2404/swift-5.10.1-RELEASE"
+                    swift-id: "swift-5.10.1-RELEASE-ubuntu24.04"
 
             #   This clobbers everything in the current directory, which is why we installed
             #   the Swift toolchain in the home directory.
@@ -89,13 +65,13 @@ jobs:
                     swift build -c release \
                         --static-swift-stdlib \
                         --product unidoc-publish \
-                        -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift \
-                        -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift/Block
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
                     swift build -c release \
                         --static-swift-stdlib \
                         --product unidoc-tools \
-                        -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift \
-                        -Xcxx -I$HOME/$SWIFT_ID/usr/lib/swift/Block
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
+                        -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
 
             -   name: Upload products
                 env:
