--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,23 @@ on:
 
 jobs:
     linux:
-        runs-on: ubuntu-22.04
-        name: Ubuntu 22.04
+        runs-on: ubuntu-24.04
+        name: Ubuntu 24.04
         env:
             UNIDOC_ENABLE_INDEXSTORE: "0"
         steps:
+            -   name: Install Swift
+                uses: tayloraswift/swift-install-action@master
+                with:
+                    swift-prefix: "swift-5.10.1-release/ubuntu2404/swift-5.10.1-RELEASE"
+                    swift-id: "swift-5.10.1-RELEASE-ubuntu24.04"
+
+            #   This installs an older version of Unidoc, not the one we are testing.
+            -   name: Install Unidoc
+                uses: tayloraswift/swift-unidoc-action@master
+                with:
+                    unidoc-version: "master"
+
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
@@ -24,6 +36,13 @@ jobs:
                 run: |
                     swift --version
                     swift build
+
+            -   name: Build documentation
+                run: |
+                    unidoc compile -I .. \
+                    --swift-toolchain $SWIFT_INSTALLATION \
+                    --ci fail-on-errors \
+                    --package-name swift-unidoc
 
     macos:
         runs-on: macos-14
