switch to Ubuntu 22.04 toolchain

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,7 @@
 # This workflow builds the project under the “starter” configuration, namely, what you would get
 # if you ran `swift build` without any arguments. We use this to verify that we can generate the
 # documentation for Unidoc itself.
-
-name: build
+name: documentation
 
 on:
     push:
@@ -17,11 +16,14 @@ jobs:
         env:
             UNIDOC_ENABLE_INDEXSTORE: "0"
         steps:
+            #   Important! We install an Ubuntu 22.04 Swift toolchain, and not the 24.04 one
+            #   because the 24.04 toolchain for some reason is built with assertions enabled,
+            #   which causes the Swift compiler to crash when building the package.
             -   name: Install Swift
                 uses: tayloraswift/swift-install-action@master
                 with:
-                    swift-prefix: "swift-5.10.1-release/ubuntu2404/swift-5.10.1-RELEASE"
-                    swift-id: "swift-5.10.1-RELEASE-ubuntu24.04"
+                    swift-prefix: "swift-5.10.1-release/ubuntu2204/swift-5.10.1-RELEASE"
+                    swift-id: "swift-5.10.1-RELEASE-ubuntu22.04"
 
             #   This installs an older version of Unidoc, not the one we are testing.
             -   name: Install Unidoc
@@ -31,11 +33,6 @@ jobs:
 
             -   name: Checkout repository
                 uses: actions/checkout@v3
-
-            -   name: Build debug
-                run: |
-                    swift --version
-                    swift build
 
             -   name: Build documentation
                 run: |
@@ -52,11 +49,16 @@ jobs:
             DEVELOPER_DIR: "/Applications/Xcode_15.3.app/Contents/Developer"
 
         steps:
+            -   name: Install Unidoc
+                uses: tayloraswift/swift-unidoc-action@master
+                with:
+                    unidoc-version: "master"
+
             -   name: Checkout repository
                 uses: actions/checkout@v3
 
-            -   name: Build debug
+            -   name: Build documentation
                 run: |
-                    swift --version
-                    swift build
-
+                    unidoc compile -I .. \
+                    --ci fail-on-errors \
+                    --package-name swift-unidoc
