--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -25,7 +25,7 @@ jobs:
                 run: |
                     swift --version
                     swift build -c release --product unidoc-publish
-                    swift build -c release --product unidoc-tools
+                    swift build -c release --product unidoc
 
             -   name: Upload products
                 env:
@@ -36,7 +36,7 @@ jobs:
 
                 run: |
                     .build/release/unidoc-publish \
-                        unidoc-tools \
+                        unidoc \
                         /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc \
                         --secret "$AWS_S3_ACCESS_SECRET"
 
@@ -69,7 +69,7 @@ jobs:
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
                     swift build -c release \
                         --static-swift-stdlib \
-                        --product unidoc-tools \
+                        --product unidoc \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift \
                         -Xcxx -I$SWIFT_INSTALLATION/lib/swift/Block
 
@@ -82,6 +82,6 @@ jobs:
 
                 run: |
                     .build/release/unidoc-publish \
-                        unidoc-tools \
+                        unidoc \
                         /unidoc/$UNIDOC_VERSION/$UNIDOC_PLATFORM/unidoc \
                         --secret "$AWS_S3_ACCESS_SECRET"
