--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,13 +10,7 @@ on:
 jobs:
     server:
         runs-on: ubuntu-24.04
-        name: Amazon Linux 2023
-
-        strategy:
-            matrix:
-                image:
-                -   tayloraswift/5.10.0-amazonlinux2023:latest
-
+        name: Linux
         steps:
             -   name: Checkout repository
                 uses: actions/checkout@v3
@@ -39,7 +33,7 @@ jobs:
                         --user root \
                         -v $PWD:/swift/swift-unidoc \
                         -w /swift/swift-unidoc \
-                        ${{ matrix.image }} \
+                        swift:6.0-noble \
                         /bin/bash .github/pipeline
 
     macos:
